Model and Views Setup v2

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/HRCase/CopilotIndices/17.14.1091.29919
+/.vs/HRCase/FileContentIndex
